addons/point_of_sale/static/src/css/pos.css
/* ... */
.pos .product .price-tag {
    position: absolute;
    top: 2px;
    right: 2px;
    vertical-align: top;
    color: white;
    line-height: 13px;
    background: #7f82ac;
    padding: 2px 5px;
    border-radius: 2px;
}

.pos .product .product-name {
    position: absolute;
    -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
        -ms-box-sizing: border-box;
            box-sizing: border-box;
    bottom:0;
    top:auto;
    line-height: 14px;
    width:100%;
    overflow: hidden;
    text-overflow: ellipsis;
    background: -webkit-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
    background:    -moz-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
    background:     -ms-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
    /* troublesome in latest webkit
    background:         linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
    */
    /*background:#FFF;*/
    padding: 3px;
    padding-top:15px;
}


/*  ********* The Screens  ********* */

.pos .screen {
    position:absolute;
    text-align: center;
    top:0px;
    bottom:0px;
    width:100%;
    overflow: auto;
    -webkit-overflow-scrolling: touch;
}
.pos .screen header h2 {
    margin-top: 0px;
    padding-top: 7px;
}
.pos .screen p{
    font-size: 18px;
}
.pos .dialog{
    width: 500px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 50px;
    text-align: center;
}
.pos .dialog p{
    font-size: 25px;
    margin-top: 10px;
    color: #5a5a5a;
}

/* a) Generic Screen Layout Constructs */

.screen .screen-content{
    margin: 0px auto;
    max-width: 1024px;
    text-align: left;
    height: 100%;
    overflow: hidden;
    position: relative;
}

@media screen and (min-width: 1024px) {
    .screen .screen-content{
        border-left:  dashed 1px rgb(215,215,215);
        border-right: dashed 1px rgb(215,215,215);
    }
}

.screen .top-content{
    position: absolute;
    left: 0px; top: 0px; right: 0px;
    height: 64px;
    border-bottom: dashed 1px rgb(215,215,215);
    text-align: center;
}
.screen .top-content .button {
    position: absolute;
    top: 0px;
    line-height: 32px;
    padding: 3px 13px;
    font-size: 20px;
    background: rgb(230, 230, 230);
    margin: 12px;
    border-radius: 3px;
    border: solid 1px rgb(209, 209, 209);
    cursor: pointer;
    transition: all 150ms linear;
}
.screen .top-content .button:hover {
    background: #efefef;
}
.screen .top-content .button:active {
    background: black;
    border-color: black;
    color: white;
}
.screen .top-content .button.highlight {
    background: rgb(110,200,155);
    color: white;
    border: solid 1px rgb(110,200,155);
}
.screen .top-content .button.highlight:hover {
    background: rgb(120,210,165);
}
.screen .top-content .button.back {
    left: 0px;
    margin-left: 16px;
}
.screen .top-content .button.next{
    right: 0px;
    margin-right: 16px;
}
.screen .left-content{
    position: absolute;
    left:0px; top: 64px; bottom: 0px;
    right:50%;
    overflow-x: hidden;
    overflow-y: auto;
    border-right: dashed 1px rgb(215,215,215);
}
.screen .left-content.pc40{
    right: 66%;
}
.screen .right-content{
    position: absolute;
    right:0px; top: 64px; bottom: 0px;
    left:50%;
    overflow-x: hidden;
    overflow-y: auto;
}
.screen .right-content.pc60{
    left:34%;
}
.screen .centered-content{
    position: absolute;
    right:25%; top: 64px; bottom: 0px;
    left:25%;
    border-right: dashed 1px rgb(215,215,215);
    border-left: dashed 1px rgb(215,215,215);
    overflow-x: hidden;
    overflow-y: auto;
}
.screen .full-content{
    position: absolute;
    right: 0%; top: 65px; bottom: 0px;
    left: 0%;
}

/* a) Layout for the Product Screen */

.pos .screen .layout-table {
    border:none;
    width:100%;
    height:100%;
}

.pos .screen .header-row {
    border:none;
    width:100%;
    height:0px;
}

.pos .screen .header-cell{
    border:none;
    width:100%;
    height:0px;
}
.pos .screen .content-row {
    width:100%;
    height:100%;
}
.pos .screen .content-cell{
    width:100%;
}
.pos .screen .content-cell .content-container{
    height:100%;
    position:relative;
}


/* b) The payment screen */

.pos .payment-numpad {
    display: inline-block;
    width: 50%;
    box-sizing: border-box;
    padding: 16px;
    text-align: center;
    float: left;
}
.pos .payment-numpad .numpad {
    float: none;
    border-radius: 4px;
    border-top: 1px solid;
    border-left: 1px solid;
    border-color: #cacaca;
    width: 296px;
    overflow: hidden;
    margin: 0;
}
.pos .payment-numpad .numpad button {
    width: 74px;
    height: 74px;
}
.pos .payment-numpad .numpad button:first-child {
    border-top-left-radius: 4px;
}
.pos .payment-numpad .numpad button:nth-child(16) {
    border-bottom-left-radius: 4px;
}

.pos .paymentlines-container {
    padding: 16px;
    padding-top: 0;
    border-bottom: dashed 1px gainsboro;
    min-height: 154px;
}

.pos .paymentlines {
    width: 100%;
}
.pos .paymentlines .controls {
    width: 40px;
}
.pos .paymentlines .label > * {
    font-size: 16px;
    padding: 8px;
}
.pos .paymentlines tbody{
    background: white;
    border-radius: 3px;
}
.pos .paymentline{
    font-size: 22px;
}
.pos .paymentline.selected {
    font-size: 22px;
    background: #6EC89B;
    color: white;
}
.pos .paymentline.selected .edit {
    background: white;
    color: #6EC89B;
    outline: 3px blue;
    box-shadow: 0px 0px 0px 3px #6EC89B;
    position: relative;
    border-radius: 3px;
}
.pos .paymentline > *{
    padding: 8px 12px;
}
.pos .paymentline .col-due,
.pos .paymentline .col-tendered,
.pos .paymentline .col-change {
    min-width: 90px;
}
.pos .paymentline.extra .col-due {
    border-radius: 0 0 6px 6px;
    border-top: solid 1px rgb(230, 230, 230);
    font-weight: bold;
}
/* ... */

